set the browser language to pass the playwright tests if default lang of browser is not en